bug 140088, "Chatzilla is crashing when switching tabs." patch=jst, r=rginda, sr=hyatt, a=asa clear element box object when the element is removed from the document.